-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.88 2007-09-24 00:38:00 remko Exp $
-----------------------------------------------------------------------------------------

2007-09-24	remko
	* *.txt:		All manpages have become *.1 (except pslib.3)
	* makefile:		All makefiles include install-man, uninstall-man
	* configure.in:		--enable-mansect= removed.
	* website/gmt_install_form.html website/install_gmt_form.pl:	Manpage section removed
	* guru/install_gmt:	---"---
	* guru/*man.sh:		Allow for manpages named *.[135]

2007-09-21	pwessel
	* {gmt,grd}math.c:	Added functions KURT, SKEW, and PQUANT plus EULER's constant
	* grdmath.c:		For -S..k, did not properly account for latitude effect on dx
	* spotter/originator.c:	Added option -Q to specify constant r/t for (x,y,z) data only
				Now lists -L option in both usage and man page
	
2007-09-19	pwessel
	* triangulate.c, pscontour.c:	Synopsis now reports name of algorithm currently
				compiled in [Shewchuk or Watson].

2007-09-19	remko
	* configure.in:		Made mansect=1 default. Make versioned libraries on Darwin.
	* src/makefile:		---"---. Actually always ended manpages in .l in stead of .$(mansect)
	* src/makegmt.macros.in:	Added VERSION as variable.

2007-09-18	pwessel
	* x2sys/x2sys_cross.c:	Skip duplicate files
	
2007-09-18	remko
	* gmt_proj.c, gmt_project.h:	Nicely reformatted all genper code and fixed
				several bug, particularly inverse projection and projection out
				of field of view.
	* gmt_init.c, gmt_plot.c:	Small changes in genper code (reformatting mostly).
	* gmt_map.[ch]:		Permanently removed old grd_forward code
	* gmt_support.c, gmt_bcr.h:	Permanently removed old BCR code
	* *.c, *.txt, *.tex:	Changed "grdfile" (and alike) in text to "grid file".

2007-09-17	remko
	* grdproject.c:		Added code by Joaquim Luis to make -R optional
	* grdproject.txt:	Changed accordingly; also better described aliasing/interpolation